# llm-db-optimization

./: README.md
data/: flights.json
llm-service/: .gitignore  Dockerfile  collect.py  pyproject.toml  tmp
llm-service/src/: main.py  settings.py
llm-service/src/agents/google_agent/: analyst_agent.py  ddl_agent.py  developer_agent.py  migration_agent.py  optimizer_agent.py  optimizer_agent_new.py  prompts.py  prompts_new.py  query_agent.py  query_optimizer_agent.py
llm-service/src/agents/query_optimizer/: optimizer_agent.py  prompts.py
llm-service/src/api/: main.py
llm-service/src/api/routes/: mocks.py  tasks.py
llm-service/src/api/schemas/: request.py  response.py
llm-service/src/di/: container.py
llm-service/src/mocks/: result_flights.json  result_quests.json
llm-service/src/services/: task_manager.py
test-system/: main.py  orig.json  pyproject.toml  test.json  test_2.py
test-system/deploy/: Dockerfile  docker-compose.yml
test-system/deploy/conf/: core-site.xml  metastore-site.xml
test-system/deploy/trino/etc/: config.properties  password-authenticator.properties
test-system/deploy/trino/etc/catalog/: iceberg.properties
