[project]
name = "llm-service"
version = "0.0.1"
description = "Service for optimizing DBs and SQL queries."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dishka>=1.7.2",
    "fastapi>=0.117.1",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.12",
    "langgraph>=0.6.7",
    "pydantic-settings>=2.11.0",
    "uvicorn[standard]>=0.37.0",
]
